--- a/include/footer.html
+++ b/include/footer.html
@@ -96,7 +96,7 @@
     transform: translateX(-6px);
     background-repeat: no-repeat;
     background-position: left 0 center;
-    background-image: url(../img/common/arr_top.png);
+    background-image: url(./img/common/arr_top.png);
     transition: 0.5s;
 }
 .linktop:hover::after { top: -130% }
