--- a/css/font.css
+++ b/css/font.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@300;400;700&family=Nanum+Myeongjo:wght@400;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@400;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 /* font-family: 'Lato', sans-serif; font-weight:300(light) / 400(regular medium) / 700(bold)
 font-family: 'Noto Sans KR', sans-serif; font-weight:300(L) 400(R) 500(M) 700(B)
 font-family: 'Nanum Myeongjo', serif; font-weight:400(R) 700(B)
