--- a/css/ui.css
+++ b/css/ui.css
@@ -117,7 +117,7 @@
 
 
 /* 스크롤형*/
-.scrollon { opacity: 0.1;transition: all 2s; }
+.scrollon { opacity: 0;transition: all 2s; }
 .scrollon.solid { opacity: 1;}
 .scrolloriginal { transform: translate(0,0);}
 .scrollright100 { transform: translate(-100px, 0); }
@@ -147,25 +147,9 @@
 .delay1_9 { transition-delay: 0.9s;}
 .delay1_10 { transition-delay: 1.0s;}
 .delay1_11 { transition-delay: 1.1s;}
+.delay1_15 { transition-delay: 1.5s;}
+.delay1_20 { transition-delay: 2.0s;}
 
-@keyframes typing{
-  0% {
-    width: 0%;
-  }
-  100% {
-    width: 100%;
-  }
-}
-
-@keyframes opa {
-  from { opacity: 0;}
-  to { opacity: 1;}
-}
-
-@keyframes transparency {
-  from { opacity: 0; }
-  to { opacity: 1;}
-}
 
 
 /*  slick 공통 기본 */
@@ -225,18 +209,7 @@
   width: 100vw; height: 100%;
   object-fit: cover;
 }
-.slidewrap .pcvdo { 
-  position:relative;padding:56.25% 0 0 0;
-  height: 100vh;
-  width: 300vw;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.slidewrap .pcvdo::after {
-  content: '';display: block;width: 100%; height: 100%;
-  position: absolute;left: 0; top: 0;
-}
-.slidewrap .replace, .sticky-box {display: none;}
+/* 
 .slidewrap .slick-arrow {
   position: absolute; left: calc(50% + 100px);top:calc(50vh + 200px);
   z-index: 9999;
@@ -246,20 +219,11 @@
 }
 .slidewrap  .slick-arrow.slick-next {background-image: url(../img/common/arr_top_w.png);transform: translateX(50px);}
 .slidewrap  .slick-arrow.slick-prev {background-image: url(../img/common/arr_bottom_w.png);}
-
-.slidewrap .wpc { position: relative;z-index:9999}
-.slidewrap .titwrap { 
-  position: absolute;top:50vh;right:0;
-  width: 650px; height: 150px;
-  color: #ffffff; }
-.slidewrap .subtit { 
-  margin-bottom: 1em;
-  font-family: 'Poppins', sans-serif; font-weight:100;font-size:1rem;letter-spacing: 2px; }
-.slidewrap .logo_font { font-size: 3.125rem;letter-spacing: 2px; }
+*/
 
 
 /* dot animation */
-.slidewrap .slick-dots { 
+/* .slidewrap .slick-dots { 
   position: absolute;
   bottom: calc(5vw + 30px);
   left: 50%;
@@ -276,7 +240,7 @@
 .slidewrap .slick-dots li.slick-active { display: block;}
 .slidewrap .slick-dots li.slick-active button {
   animation: slickdot 4000ms linear forwards; 
-}
+} */
 
 /* 슬라이드 커스텀 */
 .slide_d1 .slick-arrow {width: 30px; height: 30px;font-size: 0;
@@ -310,4 +274,26 @@
 @keyframes slickdot {
   from { width: 0; }
   to { width: 100%; }
+}
+@keyframes typing{
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes opa {
+  from { opacity: 0;}
+  to { opacity: 1;}
+}
+
+@keyframes transparency {
+  from { opacity: 0; }
+  to { opacity: 1;}
+}
+@keyframes rotate {
+  from { transform:rotate(0deg); }
+  to { transform:rotate(360deg); }
 }
