--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
 @import url(reset.css);
 @import url(font.css);
 @import url(layout.css);
-@import url(contents.css);
+@import url(contents.css);  /* subpages */
 @import url(ui.css);
-@import url(responsive.css);
+@import url(responsive.css); /* subpages */
