--- a/css/contents.css
+++ b/css/contents.css
@@ -383,6 +383,7 @@
 /**** sub4 ****/
 .sub4_1 .con0 { position: relative; }
 .sub4_1 .con0 .txtwrap { 
+  justify-content: center;
   width: 38%;height: 100%; padding: 30px 5%;
   background:url(../img/logo_back03.png) center bottom / 110% var(--background);
   transform: translateY(10%);
@@ -394,13 +395,13 @@
  }
 .sub4_1 .con0 .txtwrap .imgwrap { padding-bottom: 70%; }
 .sub4_1 .con0 .txtwrap .txt p{ 
-  width: 65%; margin: auto;
-  font-size: 1.1rem;font-family: 'Nanum Myeongjo', serif; font-weight:400;line-height: 1.3em;
+  width: 90%;max-width: 380px; margin: auto;
+  font-size: 1rem;font-family: 'Nanum Myeongjo', serif; font-weight:400;line-height: 1.3em;
 }
 .sub4_1 .con0 .txtwrap .txt p strong { font-weight: 700; }
 .sub4_1 .con0 .txtwrap .txt2 p{
-  width: 55%;
-  font-family: "HarlowDuoSerif-regular";font-size: 0.9rem;
+  width: 90%;max-width: 380px;margin: auto;
+  font-family: "HarlowDuoSerif-regular";font-size: 0.8rem;
 }
 .sub4_1 .con1 { position: relative;}
 .sub4_1 .con1 .background { 
@@ -438,11 +439,15 @@
   opacity: 0.5;
 }
 .sub4_1 .con1_2 .col:last-child:after { display: none; }
-.sub4_1 .con1_2 .col:first-child, .sub4_1 .con1_2 .col:last-child {
-  width: 17%;
+.sub4_1 .con1_2 .col:nth-child(3), .sub4_1 .con1_2 .col:nth-child(5) {
+  width: 23%
+}
+.sub4_1 .con1_2 .col:nth-child(1), .sub4_1 .con1_2 .col:nth-child(2),
+.sub4_1 .con1_2 .col:nth-child(4) {
+  width: 18%;
 }
 .sub4_1 .con1_2 .col h3 { margin-bottom: 20px;font-size: 1.1rem;font-weight: 700; }
-.sub4_1 .con1_2 .col .txt { font-family: "Pretendard-Light";letter-spacing: -1px;word-spacing: 3px; }
+.sub4_1 .con1_2 .col .txt { font-family: "Pretendard-Light";word-spacing: 3px;line-height: 1.5em;.;}
 
 .sub4_1 .con2 .leveltab { position: relative;text-align: center; }
 .sub4_1 .con2 .leveltab::after { 
