--- a/css/reset.css
+++ b/css/reset.css
@@ -14,7 +14,7 @@ a {color:inherit;text-decoration:none}
 iframe {overflow:hidden;margin:0;border:0;padding:0;vertical-align:top}
 mark {background-color:transparent}
 i {font-style:normal}
-* {box-sizing: border-box;}
+* {box-sizing: border-box;letter-spacing: -1px;}
 
 :where(picture, canvas, svg) {
   display: block;
@@ -69,7 +69,7 @@ body {
 button { cursor: pointer;}
 
 .wpc { 
-  width: 100%; max-width: var(--w-pc); 
+  width: calc(100% - 40px); max-width: var(--w-pc); 
   margin: auto; padding: 0 20px;
   box-sizing: border-box;
 }
