--- a/include/header.html
+++ b/include/header.html
@@ -23,7 +23,7 @@
 </div>
 
 <style>
-.header { position: absolute;top:0; left: 0; width: 100%;border-bottom: 1px solid #ffffff20; }
+.header { z-index:9999;position: absolute;top:0; left: 0; width: 100%;border-bottom: 1px solid #ffffff20; }
 .header_in { display: flex;justify-content: space-between;align-items: center;color: #ffffff; }
 
 .header .logo_img { display: block;width: 200px; height:45px;background: url(./img/common/logo_w.png) no-repeat center center / contain;font-size: 1px;color:transparent; }
