--- a/css/reset.css
+++ b/css/reset.css
@@ -69,7 +69,7 @@ body {
 button { cursor: pointer;}
 
 .wpc { 
-  width: calc(100% - 40px); max-width: var(--w-pc); 
+  width: 100%; max-width: var(--w-pc); 
   margin: auto; padding: 0 20px;
   box-sizing: border-box;
 }
